@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-25T08:14:22Z",
+  "timestamp" : "2023-09-26T08:14:08Z",
   "count_outdated" : 185,
   "uniques_outdated" : 158,
-  "count" : 193,
-  "uniques" : 166,
+  "count" : 194,
+  "uniques" : 167,
   "clones" : [
     {
       "timestamp": "2023-09-13T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2023-09-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
