@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 3,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2023-09-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
