@@ -1,3 +1,12 @@
+2023-09-26T08:14:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6309914514 # 1195
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
+* notice: last 14d: unq all: 3 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 158 185 / 166 193
+* notice: next accum: outdated-unq outdated-all / unq all: 158 185 / 167 194
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-26]
+
 2023-09-25T08:14:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6296674513 # 1192
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-25
